--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "install-deps": "npm ci --no-audit --prefer-offline --no-progress --timing"
+    "install-deps1": "npm ci --no-audit --timing",
+    "install-deps": "npm install"
   },
   "dependencies": {
     "react": "^18.3.1",
