--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,23 @@ on:
     branches: [ "main", "*" ]
   pull_request:
     branches: [ "main", "*" ]
+  workflow_dispatch:
 
 permissions:
+  contents: read
+  pages: write
   id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     runs-on: ubuntu-latest
 
     strategy:
@@ -30,18 +41,14 @@ jobs:
         npm run install-deps
         npm run build
 
+    - name: Setup Pages
+      uses: actions/configure-pages@v5
 
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: './dist'
     - name: Deploy GitHub Pages site
       uses: actions/deploy-pages@v4.0.5
-      with:
-        # Time in milliseconds after which to timeout and cancel the deployment (default: 10 minutes)
-        timeout: 600000
-        # Maximum number of status report errors before cancelling a deployment (default: 10)
-        error_count: 10
-        # Time in milliseconds between two deployment status report (default: 5 seconds)
-        reporting_interval: 5000
-        # Name of the artifact to deploy
-        artifact_name: dist
-        # Is this attempting to deploy a pull request as a GitHub Pages preview site? (NOTE: This feature is only in alpha currently and is not available to the public!)
-        preview: true
+      id: deployment
               
